[gd_scene load_steps=2 format=3 uid="uid://cwqeuojdcxewq"]

[ext_resource type="Script" path="res://LP4-3.gd" id="1_fx53c"]

[node name="LP4-3" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fx53c")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_top = 56.0
offset_right = 224.0
offset_bottom = 184.0
text = "Calculate"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 224.0
offset_right = 320.0
offset_bottom = 184.0
text = "Clear
"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 320.0
offset_right = 416.0
offset_bottom = 184.0
text = "Exit"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 120.0
offset_bottom = 26.0
text = "Enter # of eggs"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_top = 24.0
offset_right = 98.0
offset_bottom = 56.0
text = "Price of eggs"

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 104.0
offset_top = 32.0
offset_right = 216.0
offset_bottom = 58.0

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 128.0
offset_right = 224.0
offset_bottom = 31.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
